hphp/test/zend/bad/ext/zlib/tests/zlib_scheme_rename_basic.php
<?php
$inputFileName = dirname(__FILE__)."/004.txt.gz";
$srcFile = "compress.zlib://$inputFileName";
rename($srcFile, 'something.tmp');
var_dump(file_exists($inputFileName));
?>
===DONE===